# flask-foodie-api

./: .gitignore  README.md  pyproject.toml
src/Web/: main.py  startup.py
src/Web/Routers/: healthcheck.py
